Projecting to images according to model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-PROJECT(camera_calibrate)
+PROJECT(fisheye_calibrate)
 
-SET( sources
-    	camera_calibration.cpp
-    )
+SET( sources 	fisheye_calibration.cpp    )
 
 FIND_PACKAGE ( OpenCV 3.4 REQUIRED )
 
@@ -12,6 +10,6 @@ LINK_LIBRARIES( ${OpenCV_LIBS} )
 
 add_compile_options( -w -fvisibility=hidden)
 
-add_executable( camera_calibration camera_calibration.cpp)
+add_executable( fisheye_calibration fisheye_calibration.cpp)
 
 
