--- a/calib_data_example.yml
+++ b/calib_data_example.yml
@@ -1,6 +1,6 @@
 %YAML:1.0
 ---
-calibration_time: "jue 25 mar 2021 14:04:43"
+calibration_time: "vie 26 mar 2021 13:44:41"
 nr_of_frames: 26
 image_width: 3008
 image_height: 3000
