--- a/calib_data_example.yml
+++ b/calib_data_example.yml
@@ -1,6 +1,6 @@
 %YAML:1.0
 ---
-calibration_time: "vie 26 mar 2021 13:44:41"
+calibration_time: "lun 29 mar 2021 11:31:57"
 nr_of_frames: 26
 image_width: 3008
 image_height: 3000
